Merge sprint4 (#182)
* Change to DOCS:

* tabele sql

* Sprint 4 start

* CodeOwner is back

* Sprint 4 start (#133)

* Remove CODEOWNER for Grupa-A2-Inc/backend-teo

* Sprint 4 start

* CodeOwner is back

---------

Co-authored-by: Patranea Cosmin-Cristian <cosminpatranea@gmail.com>

* AiApiClient

* AiApiClient (#134)

* added parent-student relationship

* First task

* SOme fixes for parent and sonar qube

* StudentStatsService + Controllers

* Facut primul task + adaugat in docker-compose alea pt ai din .env ca nu mergea sa rulez fara ele, nu stiu cum ceilalti au rulat fara ele

* added role and organization validation for parent-student association

* Fixed getQuestions from TestService

* scope users list to current organization + add user status update endpoint

* auth: activation token

* bulk user creation endpoint

* AiGenerationService + Post generate/test, mai trebuie get pe status

* Swagger documentation

* Am implementat metodele pentru FailureRateService

* Am adaugat si FailureRateController

* Am corectat FailureRateController si Service si am adaugat metoda checkAlerts(testId) in AlertCheckService

* modificare nistre chestie pentru sonarqube

* send activation email for admin created users

* Am adaugat sonar-maven-plugin in pom.xml si am rezolvat probleme legate de sonarqube

* Added extra conditions to TestService

* Facut task 2 + adaugat documentatie swagger + comentarii

* added pending for user status to db

* sonarqube+ test

* removed useless code for more code coverage

* Added Constants for Status Codes

* adaugare teste

* Adaugat toate testele

* Adaugat PreAuthorize pt endpoint-uri

* Preauth task + fixes

* Finalized Summary Endpoint for Students

* Unit Testing for mostly everything and bug fixes

* Am adaugat GET my alerts si POST alert

* Fixed the rank bug and added comments across my code

* Adaugat clase + teste + fixes

* Add classroom membership to data model

* Constraint fixes

* test_db_for tests

* poate acum merge

* a